deploy/home/speed-test/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    spec:
      containers:
        - name: speed-tester
          image: ticklethepanda/speed-tester:latest
          ports:
            - containerPort: 80
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            capabilities:
              drop:
                - all
              add:
                - NET_BIND_SERVICE
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /data
              name: speed-test-volume
            - mountPath: /tmp
              name: tmp
            - mountPath: /.cache
              name: cache
      volumes:
        - name: speed-test-volume
          persistentVolumeClaim:
            claimName: speed-test-pvc
        - emptyDir: {}
          name: tmp
        - emptyDir: {}
          name: cache
